// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StatusBadge/Closed matches snapshot 1`] = `
<div>
  <span
    class="inline-flex items-center gap-1.5 rounded-full px-2.5 py-1 text-xs font-medium bg-purple-100 text-purple-800 dark:bg-purple-900/30 dark:text-purple-400"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-circle-check lucide-check-circle-2 size-3"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <path
        d="m16 9-5.5 5.5L8 12"
      />
    </svg>
    Closed
  </span>
</div>
`;

exports[`StatusBadge/Open matches snapshot 1`] = `
<div>
  <span
    class="inline-flex items-center gap-1.5 rounded-full px-2.5 py-1 text-xs font-medium bg-green-100 text-green-800 dark:bg-green-900/30 dark:text-green-400"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-circle-dot size-3"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="1"
      />
      <circle
        cx="12"
        cy="12"
        r="10"
      />
    </svg>
    Open
  </span>
</div>
`;
